--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,42 +4,55 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="260dp"
         android:layout_height="54dp"
-        android:layout_marginTop="32dp"
-        android:fontFamily="monospace"
+        android:layout_marginTop="84dp"
+        android:fontFamily="@font/fira_sans_extrabold"
         android:text="WELCOME "
         android:textAlignment="center"
         android:textAllCaps="false"
+        android:textColor="#FFFFFF"
         android:textSize="36sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.011" />
 
     <Button
         android:id="@+id/cgpacalc"
         android:layout_width="331dp"
         android:layout_height="69dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="364dp"
+        android:background="@drawable/rounded_button"
+        android:fontFamily="@font/fira_sans_extrabold"
         android:text="CGPA CALCULATOR"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/attedancemanager"
         android:layout_width="332dp"
         android:layout_height="72dp"
-        android:layout_marginTop="76dp"
+        android:background="@drawable/rounded_button"
+        android:fontFamily="@font/fira_sans_extrabold"
         android:text="attendance manager"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cgpacalc" />
+        app:layout_constraintTop_toBottomOf="@+id/cgpacalc"
+        app:layout_constraintVertical_bias="0.144" />
 </android.support.constraint.ConstraintLayout>
