Alot of changes done

--- a/app/src/main/res/layout/activity_attendance_iwt.xml
+++ b/app/src/main/res/layout/activity_attendance_iwt.xml
@@ -4,6 +4,104 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".attendance_iwt">
+    tools:context=".attendance_iwt"
+    android:layout_gravity="center">
+
+    <!-- <LinearLayout
+         android:id="@+id/linearLayout"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:gravity="center">
+
+         <ProgressBar
+             android:id="@+id/prog"
+             style="?android:progressBarStyleHorizontal"
+             android:layout_width="365dp"
+             android:layout_height="300dp"
+             android:layout_gravity="center"
+             android:foregroundGravity="center"
+             android:progress="100"
+             android:progressDrawable="@drawable/circular_green" />
+
+     </LinearLayout> -->
+
+
+    <TextView
+        android:id="@+id/class_attended"
+        android:layout_width="174dp"
+        android:layout_height="66dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="257dp"
+        android:text="Classes Attended : "
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.269"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/total_classes"
+        android:layout_width="174dp"
+        android:layout_height="66dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="257dp"
+        android:text="Total Classes :"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.269"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/class_attended" />
+
+    <TextView
+        android:id="@+id/estimate"
+        android:layout_width="339dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="20dp"
+        android:hint="Estimate"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/total_classes" />
+
+    <EditText
+        android:id="@+id/ca"
+        android:layout_width="161dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="41dp"
+        android:layout_marginTop="303dp"
+        android:layout_marginEnd="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/class_attended"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/ta"
+        android:layout_width="161dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="41dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/total_classes"
+        app:layout_constraintTop_toBottomOf="@+id/ca" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="172dp"
+        tools:layout_editor_absoluteY="487dp"
+        tools:ignore="MissingConstraints" />
 
 </android.support.constraint.ConstraintLayout>
