--- a/app/src/main/res/layout/cgpa_calculator.xml
+++ b/app/src/main/res/layout/cgpa_calculator.xml
@@ -99,10 +99,10 @@
         android:layout_height="40dp"
         android:layout_above="@+id/sgpa"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="171dp"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="173dp"
         android:layout_marginTop="40dp"
-        android:layout_marginBottom="134dp"
+        android:layout_marginBottom="127dp"
         android:ems="10"
         android:hint="1-4"
         android:inputType="number"
@@ -300,8 +300,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="175dp"
-        android:layout_marginBottom="396dp"
+        android:layout_marginStart="173dp"
+        android:layout_marginBottom="395dp"
         android:ems="10"
         android:hint="1-4"
         android:inputType="textPersonName"
